@@ -1,14 +1,13 @@
 package com.example.exercises;
 
-import java.security.SecureRandom;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Random;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 import com.example.domain.*;
+
+import java.util.List;
+import java.util.Random;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
 /**
  * 
@@ -16,16 +15,18 @@ import com.example.domain.*;
  *
  */
 public class Exercise22 {
-	private static final Random random = new SecureRandom();
-	private static final Supplier<Animal> spiderCreator = Spider::new;
-	private static final Supplier<Animal> catCreator = Cat::new;
-	private static final Supplier<Animal> fishCreator = () -> new Fish("Çakıl");
-	private static final List<Supplier<Animal>> suppliers = Arrays.asList(spiderCreator, catCreator, fishCreator);
 
 	public static void main(String[] args) {
 		// Take a list of 100 random animals
-		final List<Animal> randomAnimals = IntStream.generate(() -> random.nextInt(suppliers.size())).mapToObj(suppliers::get)
-				.map(Supplier::get).limit(100).collect(Collectors.toList());
-		randomAnimals.forEach(System.out::println);
+		IntStream.range(0, 100).mapToObj(value -> {
+			int i = new Random().nextInt(1, 4);
+			return switch (i) {
+				case 1 -> new Cat();
+				case 2 -> new Spider();
+				case 3 -> new Fish("Nemo");
+				default -> throw new IllegalStateException("Unexpected value: " + i);
+			};
+		}).toList().forEach(System.out::println);
+
 	}
 }
